--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
+  "name": "readme-generator",
+  "version": "1.0.0",
+  "description": "## Description",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com//readme-generator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JavierBurgara/readme-generator/issues"
+  },
+  "homepage": "https://github.com/JavierBurgara/readme-generator#readme",
   "dependencies": {
-    "inquirer": "^8.2.4",
-    "jest": "^29.6.2"
+    "inquirer": "^8.2.4"
   }
 }
